--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,7 @@
                 <p>Sing In to your account</p>
                 <form method="post">
                     {% csrf_token %}
+                    <input type="hidden" name="next" value="{{ request.GET.next }}" />
                     <input type="text" name="phone" placeholder="Phone Number" class="form-control mb-3">
                     <input type="password" name="password" placeholder="Password" class="form-control mb-3">
                     <button type="submit" class="btn btn-dark btn-lg">Login</button>
