--- a/templates/bill.html
+++ b/templates/bill.html
@@ -1,21 +1,20 @@
 {% extends "base.html" %}
 
-{% block 'title' %}Show Mill | Draupadi Mess{% endblock 'title' %}
+{% block 'title' %}Bill | Draupadi Mess{% endblock 'title' %}
 
 {% block 'content' %}
-    <div class="container-xxl flex-grow-1 container-p-y">
+    <div class="container-xxl flex-grow-1 py-0">
         <h4 class="pt-3 mb-4"><span class="text-muted fw-light">Dashboard / </span>Bill</h4>
+        {% if cal_btn %}
+            <form method="post" action="{% url 'calculate' %}" class="mb-4">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary">Calculate</button>
+            </form>
+        {% endif %}
         <div class="card mb-5">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-success alert-dismissible" role="alert">
-                        {{message}}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>                        
-                {% endfor %}
-            {% endif %}
-            
-            
+            <div class="card-body">
+
+            </div>
         </div>
     </div>
 
