--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,8 +3,114 @@
 {% block 'title' %}Dashboard{% endblock 'title' %}
 
 {% block 'content' %}
-    <div class="container-xxl flex-grow-1 container-p-y">
-        <h4 class="py-3 mb-4"><span class="text-muted fw-light">Dashboard /</span> Add Mill</h4>
+    <div class="container-xxl flex-grow-1 py-0">
+        <h4 class="py-3 mb-2"><span class="text-muted fw-light">Dashboard</h4>
+        <div class="row mb-5">
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <button type="button" class="btn btn-icon rounded-pill btn-label-google-plus waves-effect"><i class="mdi mdi-silverware-fork-knife mdi-20px"></i></button>
+                        <h5 class="mt-3 d-flex justify-content-between"><span>Total Mill</span> <strong>{{ total_mill }}</strong></h5>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <button type="button" class="btn btn-icon rounded-pill btn-label-google-plus waves-effect"><i class="mdi mdi-shopping-outline mdi-20px"></i></button>
+                        {% if total_bazar > 0 %}
+                            <h5 class="mt-3 d-flex justify-content-between"><span>Total Bazar</span> <strong>{{total_bazar}}</strong></h5>
+                        {% else %}
+                            <h5>No Bazar Yet</h5>
+                        {% endif %}
+                    </div>
+                </div>
+            </div> 
+
+            <div class="col-md-3">
+                <div class="card">
+                    <div class="card-body text-center">
+                        <button type="button" class="btn btn-icon rounded-pill btn-label-google-plus waves-effect"><i class="mdi mdi-cash-check mdi-20px"></i></button>
+                        {% if total_diposit > 0 %}
+                            <h5 class="mt-3 d-flex justify-content-between"><span>Total Diposit</span> <strong>₹ {{total_diposit}}</strong></h5>
+                        {% else %}
+                            <h5>No Diposit Yet</h5>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>          
+        </div>
+
+        <div class="row">
+            {% if my_bazars %}
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header d-flex justify-content-between"><h5 class="mb-0">My bazars</h5><a href="{% url 'addmill' %}" class="btn btn-primary">Add Bazar</a></div>
+                        <div class="table-responsive text-nowrap">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Purpose</th>
+                                        <th>Amount</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for my_bazar in my_bazars %}
+                                        <tr>
+                                            <td>{{my_bazar.date}}</td>
+                                            <td>Bazar</td>
+                                            <td>₹ {{my_bazar.amount}}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                                <tbody class="table-border-bottom-0">
+                                        <tr>
+                                            <td colspan="2">Total</td>
+                                            <td><strong>₹ {{bazar_amount}}</strong></td>
+                                        </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+
+            {% if diposits %}
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header d-flex justify-content-between"><h5 class="mb-0">My Diposits</h5><a href="{% url 'adddiposits' %}" class="btn btn-primary">Add Diposit</a></div>
+                        <div class="table-responsive text-nowrap">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Purpose</th>
+                                        <th>Amount</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for diposit in diposits %}
+                                        <tr>
+                                            <td>{{diposit.date}}</td>
+                                            <td>{% if diposit.purpose == 'M' %}Bazar {% elif diposit.purpose == 'O' %}Oil {% elif diposit.purpose == 'G' %} Gas {% elif diposit.purpose == 'V' %}Ginger, Garlic & etc.{% endif %}</td>
+                                            <td>₹ {{diposit.amount}}</td>
+                                        </tr>
+                                    {% endfor %}
+                                </tbody>
+                                <tbody class="table-border-bottom-0">
+                                        <tr>
+                                            <td colspan="2">Total</td>
+                                            <td><strong>₹ {{diposit_amount}}</strong></td>
+                                        </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+        </div>
     </div>
 
 
