--- a/templates/bill.html
+++ b/templates/bill.html
@@ -10,10 +10,173 @@
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary">Calculate</button>
             </form>
+            <div class="card mb-5">
+                <div class="card-header">
+                    <h5 class="mb-0">Bills for {{month}} {{year}}</h5>
+                </div>
+                <div class="card-body pt-0">
+                    <div class="table-responsive text-nowrap">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Mill</th>
+                                    <th>Mill Cost</th>
+                                    <th>Establish</th>
+                                    <th>Total</th>
+                                    <th>Diposit</th>
+                                    <th>Due</th>
+                                </tr>
+                            </thead>
+                            <tbody class="table-border-bottom-1">
+                                {% for bill in bills %}
+                                    <tr>
+                                        <td>{{bill.name}}</td>
+                                        <td>{{bill.mill}}</td>
+                                        <td>{{bill.mill_cost}}</td>
+                                        <td>{{bill.establish}}</td>
+                                        <td>{{bill.total}}</td>
+                                        <td>{{bill.diposit}}</td>
+                                        <td>{{bill.due}}</td>
+                                    </tr>
+                                {% endfor %}                        
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         {% endif %}
         <div class="card mb-5">
+            <div class="card-header">
+                <h5 class="mb-0">Bills for {{month}} {{year}}</h5>
+            </div>
+            <div class="card-body pt-0">
+                
+            </div>
+        </div>
+        <div class="card invoice-preview-card">
             <div class="card-body">
+                <div class="d-flex justify-content-between flex-xl-row flex-md-column flex-sm-row flex-column m-sm-3 m-0">
+                    <div class="mb-xl-0 mb-4">
+                        <div class="d-flex svg-illustration mb-4 gap-2 align-items-center">
+                            <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M0.00172773 0V6.85398C0.00172773 6.85398 -0.133178 9.01207 1.98092 10.8388L13.6912 21.9964L19.7809 21.9181L18.8042 9.88248L16.4951 7.17289L9.23799 0H0.00172773Z"
+                                    fill="#7367F0"></path>
+                                <path opacity="0.06" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M7.69824 16.4364L12.5199 3.23696L16.5541 7.25596L7.69824 16.4364Z" fill="#161616"></path>
+                                <path opacity="0.06" fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M8.07751 15.9175L13.9419 4.63989L16.5849 7.28475L8.07751 15.9175Z" fill="#161616"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M7.77295 16.3566L23.6563 0H32V6.88383C32 6.88383 31.8262 9.17836 30.6591 10.4057L19.7824 22H13.6938L7.77295 16.3566Z"
+                                    fill="#7367F0"></path>
+                            </svg>
 
+                            <span class="app-brand-text fw-bold fs-4"> Vuexy </span>
+                        </div>
+                        <p class="mb-2">Office 149, 450 South Brand Brooklyn</p>
+                        <p class="mb-2">San Diego County, CA 91905, USA</p>
+                        <p class="mb-0">+1 (123) 456 7891, +44 (876) 543 2198</p>
+                    </div>
+                    <div>
+                        <h4 class="fw-medium mb-2">INVOICE #{{mybill.id}}</h4>
+                        <div class="mb-2 pt-1">
+                            <span>Date Issues:</span>
+                            <span class="fw-medium">April 25, 2021</span>
+                        </div>
+                        <div class="pt-1">
+                            <span>Date Due:</span>
+                            <span class="fw-medium">May 25, 2021</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr class="my-0">
+            <div class="card-body">
+                <div class="row p-sm-3 p-0">
+                    <div class="col-xl-6 col-md-12 col-sm-5 col-12 mb-xl-0 mb-md-4 mb-sm-0 mb-4">
+                        <h6 class="mb-3">Invoice To:</h6>
+                        <p class="mb-1">{{mybill.name.first_name}} {{mybill.name.last_name}}</p>
+                        <p class="mb-1">{{mybill.name.phone}}</p>
+                        <p class="mb-0">peakyFBlinders@gmail.com</p>
+                    </div>
+                    <div class="col-xl-6 col-md-12 col-sm-7 col-12">
+                        <h6 class="mb-3">Bill To:</h6>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td class="pe-4">Total Due:</td>
+                                    <td class="fw-medium">₹ {{mybill.due}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="table-responsive border-top">
+                <table class="table m-0">
+                    <thead>
+                        <tr>
+                            <th>Description</th>
+                            <th>Cost</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-nowrap">Total Mill</td>
+                            <td>{{mybill.mill}}</td>
+                        </tr>
+                        <tr>
+                            <td class="text-nowrap">Mill Charge</td>
+                            <td>₹ {{mill_charge}}</td>
+                        </tr>
+                        <tr>
+                            <td class="text-nowrap">Total Mill Cost</td>
+                            <td>₹ {{mybill.mill_cost}}</td>
+                        </tr>
+                        <tr>
+                            <td class="text-nowrap">Establish Charge</td>
+                            <td>₹ {{mybill.establish}}</td>
+                        </tr>
+                        <tr>
+                            <td class="text-nowrap">Total Cost</td>
+                            <td>₹ {{mybill.total}}</td>
+                        </tr>
+                        <tr>
+                            <td class="text-nowrap">Diposit</td>
+                            <td>₹ {{mybill.diposit}}</td>
+                        </tr>
+                        <tr>
+                            <td class="text-nowrap">Due</td>
+                            <td>₹ {{mybill.due}}</td>
+                        </tr>
+                        <tr>
+                            
+                            <td class="text-end pe-3 py-4">
+                                <p class="mb-2 pt-3">Subtotal:</p>
+                                <p class="mb-2">Discount:</p>
+                                <p class="mb-2">Tax:</p>
+                                <p class="mb-0 pb-3">Total:</p>
+                            </td>
+                            <td class="py-4">
+                                <p class="fw-medium mb-2 pt-3">$154.25</p>
+                                <p class="fw-medium mb-2">$00.00</p>
+                                <p class="fw-medium mb-2">$50.00</p>
+                                <p class="fw-medium mb-0 pb-3">$204.25</p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="card-body mx-3">
+                <div class="row">
+                    <div class="col-12">
+                        <span class="fw-medium">Note:</span>
+                        <span>It was a pleasure working with you and your team. We hope you will keep us in mind for
+                            future freelance projects. Thank You!</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
