--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,4 +36,9 @@ body {
 .loginform input {
   border-radius: 0;
   height: 50px;
+}
+
+.bill-logo {
+  max-width: 280px;
+  height: auto;
 }/*# sourceMappingURL=style.css.map */
